--- a/index.html
+++ b/index.html
@@ -38,21 +38,18 @@ audio {
 
 <body>
 
-<h1>Happy Birthday (Her Name) 🎂✨</h1>
+<h1>Happy Birthday Boggart 🎂✨</h1>
 <p>Forever our 1D girl 💙</p>
 
 <div class="message-box">
-  <h2>From Rohan</h2>
-  <audio controls>
-    <source src="rohan.mp3" type="audio/mpeg">
-  </audio>
+  <h2>From Vivify 💙</h2>
+<audio controls>
+  <source src="Vivify.mp3" type="audio/mpeg">
+</audio>
+
 </div>
 
-<div class="message-box">
-  <h2>From Meera</h2>
-  <audio controls>
-    <source src="meera.mp3" type="audio/mpeg">
-  </audio>
+
 </div>
 
 </body>
