--- a/index.html
+++ b/index.html
@@ -43,10 +43,65 @@ audio {
 
 <div class="message-box">
   <h2>From Vivify 💙</h2>
-<audio controls>
-  <source src="Vivify.mp3" type="audio/mpeg">
-</audio>
+  <audio controls>
+    <source src="Vivify.mp3" type="audio/mpeg">
+  </audio>
+</div>
 
+<div class="message-box">
+  <h2>From Fool 🎭</h2>
+  <audio controls>
+    <source src="Fool.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Fang 🐺</h2>
+  <audio controls>
+    <source src="Fang.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Coco 🌸</h2>
+  <audio controls>
+    <source src="Coco.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Private Voice 🎧</h2>
+  <audio controls>
+    <source src="PrivateVoice.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Ahmad ⭐</h2>
+  <audio controls>
+    <source src="Ahmad.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Oreki 📖</h2>
+  <audio controls>
+    <source src="Oreki.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Ack ⚡</h2>
+  <audio controls>
+    <source src="Ack.mp3" type="audio/mpeg">
+  </audio>
+</div>
+
+<div class="message-box">
+  <h2>From Big Cheeks 😂</h2>
+  <audio controls>
+    <source src="BigCheeks.mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 
